[gd_scene load_steps=6 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://Asteroid.tscn" type="PackedScene" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1024, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 600, 0, 0, 0, 0, 1024, 600, 0, 0, 0, 0, 1024, 0, 0, 0, 0, 0, -8, 296 )
}

[node name="Node" type="Node"]
script = ExtResource( 3 )
asteroid_scene = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="AsteroidTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]
one_shot = true

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="AsteroidPath" type="Path2D" parent="."]
visible = false
curve = SubResource( 1 )

[node name="AsteroidSpawnLocation" type="PathFollow2D" parent="AsteroidPath"]
position = Vector2( 1024, 0 )
rotation = 3.14159

[node name="Background" parent="." instance=ExtResource( 2 )]
